test_regress/t/t_checker_unsup.out
%Error-UNSUPPORTED: t/t_checker_unsup.v:29:11: Unsupported: 'checker' below unit-level
   29 |   checker checker_in_module;
      |           ^~~~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_checker_unsup.v:35:11: Unsupported: 'checker' below unit-level
   35 |   checker checker_in_pkg;
      |           ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_checker_unsup.v:39:29: Unsupported: checker port variable default value
   39 | checker Chk(input defaulted = 1'b0);
      |                             ^
%Error-UNSUPPORTED: t/t_checker_unsup.v:43:3: Unsupported: checker rand
   43 |   rand bit randed;   
      |   ^~~~
%Error-UNSUPPORTED: t/t_checker_unsup.v:65:3: Unsupported: default clocking identifier
   65 |   default clocking clk;   
      |   ^~~~~~~
%Error-UNSUPPORTED: t/t_checker_unsup.v:68:11: Unsupported: recursive 'checker'
   68 |   checker ChkChk;   
      |           ^~~~~~
%Error: Exiting due to
